tests/openmp_vv/5.1/error/test_error_message.c
#pragma omp parallel
#pragma omp single
#pragma omp error severity(warning) message("error message success")
#pragma omp target map (from: _ompvv_isOffloadingOn)
